refactored to parameterized